debugged adding a new game and displaying it

--- a/app/templates/games.html
+++ b/app/templates/games.html
@@ -3,8 +3,8 @@
 {% block content %}
 <h2 class="text-2xl font-cozy mb-4">All Games</h2>
 
-<a href="{{ url_for('game.add_game') }}" class="inline-block mb-4 px-4 py-2 bg-sage text-white rounded hover:bg-rose/90">
-    + Add New Game
+<a href="{{ url_for('game.add_game') }}" class="inline-block mb-4 px-4 py-2 bg-tea-rose text-cream rounded-full hover:bg-coral-pink/80 transition duration-200 ease-in-out shadow-sm">
+    <span class="text-sm"><i class="fa-solid fa-plus mr-2"></i> Brew Up a New Game</span>
 </a>
 
 <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-3">
